@@ -1,3 +1,9 @@
+2016-05-19  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-487
+
+	* src/m_atmosphere.cc (vmr_fieldSetConstant): A new small WSM.
+
 2016-03-21 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-486
